parallel & instructions